== 2.0 (????-??-??) ==
- Major rewrite
- Multi-channel support
- Unix socket support
- New option: -l <address> to change the listen address (TCP sockets)
- New option: -d - disable the tcp listener
- New option: -f - run in foreground and log to stdout
- Support address:port format for -s
- Fix: Exit when nickname is in use
- Fix: fixed several leaks
- Fix: reduced memory usage

== 1.1 (2008-11-20) ==
- First release